:bug: fix-style: navbar on mobile

--- a/src/styles/components/shared/_header.scss
+++ b/src/styles/components/shared/_header.scss
@@ -39,7 +39,8 @@
   position: relative;
   z-index: 100;
   transform: translateY(-100%);
-  animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3.5s forwards;
+  animation: slide-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3.5s
+    forwards;
 
   &__menu-icon {
     position: relative;
@@ -120,7 +121,8 @@
         padding-block: 12px;
         padding-inline: 1rem;
       }
-      a,span {
+      a,
+      span {
         // &.nav-link {
         //   margin: 0 2.4rem;
         // }
@@ -166,29 +168,25 @@
 
       a {
         color: white;
-       
-        // text-wrap: nowrap;
-       
-      }
-      .active-sub-nav{
-       a{
 
-         color: $secondary-secondary;
-       }
-       svg{
-        fill: $secondary-secondary ;
-       }
-        
+        // text-wrap: nowrap;
+      }
+      .active-sub-nav {
+        a {
+          color: $secondary-secondary;
+        }
+        svg {
+          fill: $secondary-secondary;
+        }
       }
     }
-    &-item{
+    &-item {
       border-bottom: 1px solid rgba(255, 255, 255, 0.14);
       margin-bottom: 10px;
       &:last-child {
         border-bottom: none; /* Remove border for the last item */
         margin-bottom: 0;
-      
-      } 
+      }
     }
 
     &:hover {
@@ -287,9 +285,10 @@
   .menu__item {
     transform: translateX(-150%);
     transition: transform 0.4s ease-in-out;
+    text-transform: capitalize;
 
     $time-offset: 0.15;
-    @for $i from 1 through 6 {
+    @for $i from 1 through 7 {
       &:nth-child(#{$i}) {
         $time-offset: $time-offset + 0.1;
         transition-delay: #{$time-offset}s;
@@ -415,5 +414,14 @@
     width: 0px;
     top: 0;
     right: -100%;
+  }
+}
+
+.mobile-header-wrapper {
+  position: fixed;
+  z-index: 110;
+
+  &.is--open {
+    inset: 0;
   }
 }
